--- a/styles/stallions.css
+++ b/styles/stallions.css
@@ -77,6 +77,7 @@ h1 {
   font-family: var(--sec-font-family);
   color: #e2caaf;
   letter-spacing: 1px;
+  overflow-wrap: anywhere;
 }
 
 #horse-details span {
@@ -91,6 +92,7 @@ span:nth-of-type(3) {
   main img {
     object-fit: cover;
     object-position: center;
+    height: 350px;
   }
 }
 @media screen and (max-width: 767px) {
